# dart

./: .gitignore  CMakeLists.txt  LICENSE  README.md  doxygen.config
CMakeModules/: FindDEPTHSENSE.cmake  FindOpenNI2.cmake
models/leftHand/: leftHand.xml
src/: tracker.cpp  tracker.h
src/depth_sources/: depth_source.h  depthsense_depth_source.cpp  depthsense_depth_source.h  image_depth_source.h  openni_depth_source.cpp  openni_depth_source.h  pango_depth_source.h
src/depth_sources/lcm/: lcm_depth_provider.hpp
src/depth_sources/lcm/bot_core/: image_metadata_t.hpp  image_t.hpp  images_t.hpp
src/geometry/: SE3.h  distance_transforms.cpp  distance_transforms.cu  distance_transforms.h  geometry.cpp  geometry.h  grid_2d.h  grid_3d.h  plane_fitting.cpp  plane_fitting.cu  plane_fitting.h  sdf.cpp  sdf.h
src/img_proc/: bilateral_filter.cu  bilateral_filter.h  img_ops.cu  img_ops.h  organized_point_cloud.cu  organized_point_cloud.h  resampling.cu  resampling.h
src/mesh/: assimp_mesh_reader.cpp  assimp_mesh_reader.h  mesh.cpp  mesh.h  mesh_proc.cpp  mesh_proc.h  mesh_sample.cpp  mesh_sample.h  mesh_splat.cpp  mesh_splat.h  primitive_meshing.cpp  primitive_meshing.h
src/model/: host_only_model.cpp  host_only_model.h  mirrored_model.cpp  mirrored_model.h  model.cpp  model.h  read_model_urdf.cpp  read_model_urdf.h
src/optimization/: contact_prior.cpp  optimization.h  optimizer.cpp  optimizer.h  point_2d_3d_prior.cpp  point_3d_3d_prior.cpp  prediction_renderer.cpp  prediction_renderer.h  priors.h
src/optimization/kernels/: intersection.cu  intersection.h  kernel_common.h  kinematics.cu  kinematics.h  modToObs.cu  modToObs.h  obsToMod.cu  obsToMod.h  raycast.cu  raycast.h
src/point_cloud_src/: point_cloud_src.h
src/pose/: pose.cpp  pose.h  pose_reduction.h
src/util/: cuda_utils.h  dart_io.cpp  dart_io.h  dart_types.h  gl_dart.cpp  gl_dart.h  image_io.cpp  image_io.h  mirrored_memory.h  model_renderer.cpp  model_renderer.h  ostream_operators.cpp  ostream_operators.h  prefix.h  string_format.cpp  string_format.h  vector_type_template.h
src/visualization/: color_ramps.cu  color_ramps.h  data_association_viz.cu  data_association_viz.h  gradient_viz.cu  gradient_viz.h  matrix_viz.cu  matrix_viz.h  sdf_viz.cu  sdf_viz.h
test/: test_main.cpp  test_mirrored_model.cpp  test_model_jacobian.cpp  test_model_jacobian.cu  test_obs_to_mod_kernels.cpp  test_pose_reduction.cpp  test_voxelize.cpp
